# Games

./: .gitignore  .travis.yml  CMakeLists.txt  Castle.cpp  Games.cpp  Hurricane.cpp  Intrusion.cpp  Kingdom.cpp  Minesweeper.cpp  Pollution.cpp  ProjectFiles.cmake  Todo.txt  unixbuild.sh
app/Driller/: Driller.cpp  DrillerNotes.txt
app/Sovereign/: Sovereign.cpp
data/scripts/Arkanoid/: config.lua
data/scripts/Castle/: config.lua
data/scripts/Driller/: config.lua
data/scripts/Hurricane/: DropTables.lua  config.lua
data/scripts/Intrusion/: config.lua
data/scripts/Kingdom/: config.lua
data/scripts/Minesweeper/: config.lua
data/scripts/Pacman/: config.lua
data/scripts/Pollution/: config.lua
data/scripts/Snake/: config.lua
data/scripts/Sovereign/: config.lua
include/Arkanoid/Components/: CircleComponent.hpp  PhysicsComponent.hpp  PlayerPaddleControlComponent.hpp  PositionComponent.hpp  RectangleComponent.hpp
include/Arkanoid/Infrastructure/: ArkanoidConfigurationManager.hpp  Definitions.hpp
include/Arkanoid/Scenes/: GameScene.hpp
include/Castle/Components/: CollisionComponent.hpp  HealthComponent.hpp  InteractableComponent.hpp  LevelTransitionComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  RectangleComponent.hpp  SpriteComponent.hpp  TimerComponent.hpp  WaypointComponent.hpp
include/Castle/DataStructures/: LevelCell.hpp  ParsedEntity.hpp  ParsedLevel.hpp
include/Castle/GameObjects/: Level.hpp
include/Castle/Infrastructure/: AutoPlayerInputManager.hpp  CastleConfigurationManager.hpp  EntityGroups.hpp  EntityPrototypeFactory.hpp  LevelTransitionCoordinator.hpp  LuaLevelParser.hpp
include/Castle/Scenes/: DebugOverlayScene.hpp  GameScene.hpp  PlayerCollisionTestScene.hpp
include/Castle/Systems/: CollisionSystem.hpp  KinematicSystem.hpp  PlayerControlSystem.hpp  PlayerInteractionSystem.hpp  System.hpp  WaypointSystem.hpp
include/Driller/Core/: Game.hpp
include/Driller/DataStructures/: BuildingData.hpp  BuildingInstance.hpp  BuildingPrototype.hpp  BuildingProvidedJob.hpp  BuildingProvidedNeed.hpp  GameCommand.hpp  JobCompleteDelegate.hpp  JobData.hpp  JobInstance.hpp  JobPrototype.hpp  NeedInstance.hpp  ResearchCategory.hpp  ResearchData.hpp  ResearchInstance.hpp  ShuttleData.hpp  ShuttleInstance.hpp  ShuttlePrototype.hpp  TerrainData.hpp  TerrainRow.hpp  TerrainTile.hpp  WorkerData.hpp  WorkerInstance.hpp  WorkerPrototype.hpp
include/Driller/GameObjects/: GameObject.hpp
include/Driller/Infrastructure/: ConfigurationManager.hpp  Definitions.hpp
include/Driller/Scenes/: ExitScene.hpp  GameScene.hpp  GameUiScene.hpp  TitleScene.hpp
include/Driller/Services/: BuildingPlacementService.hpp  BuildingPrototypeService.hpp  CostService.hpp  GameCommandService.hpp  IdentificationService.hpp  JobAllocationService.hpp  JobCompletionService.hpp  JobCreationService.hpp  JobPrototypeService.hpp  MarketService.hpp  NeedProviderLocationService.hpp  PrototypeService.hpp  ResearchService.hpp  SceneChangeService.hpp  ShuttleCargoService.hpp  ShuttleCompletionService.hpp  ShuttleCreationService.hpp  ShuttleDepartureService.hpp  ShuttlePrototypeService.hpp  ShuttleUpdateService.hpp  TerrainAlterationService.hpp  WorkerClassService.hpp  WorkerCreationService.hpp  WorkerPrototypeService.hpp  WorkerRecruitmentService.hpp  WorkerUpdateService.hpp
include/Driller/Views/: BuildingView.hpp  JobView.hpp  ShuttleView.hpp  TerrainView.hpp  View.hpp  WorkerView.hpp
include/EntityComponentSystem/: Component.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  System.hpp
include/Hurricane/Components/: CollisionComponent.hpp  DamageComponent.hpp  DropComponent.hpp  HealthComponent.hpp  MovementComponent.hpp  PickupComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  ProjectileComponent.hpp  SpriteComponent.hpp
include/Hurricane/Infrastructure/: Definitions.hpp  EntityFactory.hpp  EntityGroups.hpp  HurricaneConfigurationManager.hpp  LuaDataParser.hpp
include/Hurricane/Objects/: DropTable.hpp  Level.hpp
include/Hurricane/Scenes/: DebugOverlayGameScene.hpp  GameScene.hpp
include/Hurricane/Systems/: CollisionSystem.hpp  KinematicSystem.hpp  PickupControlSystem.hpp  PlayerControlSystem.hpp  ProjectileControlSystem.hpp
include/Infrastructure/: Application.hpp  ConfigurationManager.hpp  FontManager.hpp  InputManager.hpp  LuaConsole.hpp  LuaManager.hpp  Scene.hpp  SceneManager.hpp  SplashScreen.hpp  TextureManager.hpp
include/Infrastructure/DataStructures/: Path.hpp  PathNode.hpp  ResourceBundle.hpp
include/Infrastructure/Exceptions/: SurfaceNotFoundException.hpp
include/Infrastructure/Gui/: BasicButton.hpp  TextBox.hpp  UiElement.hpp
include/Infrastructure/Interfaces/: IConfigurationManager.hpp
include/Infrastructure/Scenes/: LuaConsoleScene.hpp
include/Infrastructure/Services/: IPathSurface.hpp  IPathfindingService.hpp  ISurfaceService.hpp  PathfindingService.hpp  ResourceService.hpp  SurfaceService.hpp
include/Intrusion/Components/: CircleComponent.hpp  LifeComponent.hpp  PathFollowComponent.hpp  PositionComponent.hpp  ProjectileComponent.hpp  RenderableComponent.hpp  SpriteComponent.hpp  TowerFiringComponent.hpp  TowerTargetComponent.hpp  TowerTargetingComponent.hpp
include/Intrusion/DataStructures/: LevelCell.hpp  LifeBundle.hpp  ParsedEntity.hpp  ParsedLevel.hpp  ParsedProjectile.hpp  ParsedTower.hpp  ParsedWave.hpp  ResourceBundle.hpp
include/Intrusion/GameObjects/: Level.hpp
include/Intrusion/Infrastructure/: EntityFactory.hpp  IntrusionConfigurationManager.hpp  IntrusionDefinitions.hpp  (+4 more)
include/Utility/: Collision.hpp  Colour.hpp  Hash.hpp  Orientation.hpp  PhysicsDebug.hpp  Signal.hpp  TestSignal.hpp  TextHelpers.hpp  VectorMath.hpp
misc/: ServiceShellGenerator.py
scripts/: install_sfml.sh
src/EntityComponentSystem/: Entity.cpp  EntityManager.cpp
src/Infrastructure/: Application.cpp  ConfigurationManager.cpp  FontManager.cpp  InputManager.cpp  LuaConsole.cpp  LuaManager.cpp  Scene.cpp  SceneManager.cpp  SplashScreen.cpp  TextureManager.cpp
src/Utility/: Collision.cpp  Colour.cpp  PhysicsDebug.cpp  VectorMath.cpp
(+404 files in other folders)
