CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Games)

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
	MESSAGE(STATUS "Clang system/compiler detected")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++17 -stdlib=libc++ -Wno-logical-op-parentheses")

	SET(ALL_LIBS ${ALL_LIBS}
		"-framework OpenGL"
	)

ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
	MESSAGE(STATUS "G++ system/compiler detected")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
	MESSAGE(STATUS "Intel system/compiler detected")

ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL ${MSVC})
	MESSAGE(STATUS "Microsoft system/compiler detected")
	ADD_DEFINITIONS(-DNOMINMAX -DWIN32_LEAN_AND_MEAN -D_CRT_SECURE_NO_DEPRECATE -DGAMES_WIN32)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")

	SET(SFML_ROOT "C:/Libraries/SFML-2.4.2")
	SET(LUA_ROOT "C:/Libraries/Lua5.3")
	SET(SFML_STATIC_LIBRARIES TRUE)

ENDIF()

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	${CMAKE_SOURCE_DIR}/cmake_modules
)

# Currently always making static LOCAL_LIBS
SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-s")

# Determine what type of library (Debug/Release) to build
IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE Debug)
    set(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-d")

ELSE(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE Release)

ENDIF()

INCLUDE(${CMAKE_SOURCE_DIR}/ProjectFiles.cmake)

FIND_PACKAGE(SFML 2 REQUIRED graphics window system)
IF(NOT SFML_FOUND)
	MESSAGE( FATAL_ERROR "Could not find SFML 2.X" )
ENDIF()

FIND_PACKAGE(Lua 5 REQUIRED)
IF(NOT LUA_FOUND)
	MESSAGE(FATAL_ERROR "Could not find Lua 5.X")
ENDIF()


INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/)

# Local Libraries
ADD_LIBRARY(Infrastructure${LIBRARY_EXTENSION}			STATIC	${INFRASTRUCTURE_HEADER_FILES}			${INFRASTRUCTURE_SOURCE_FILES})
ADD_LIBRARY(Utility${LIBRARY_EXTENSION}					STATIC	${UTILITY_HEADER_FILES}					${UTILITY_SOURCE_FILES})
ADD_LIBRARY(EntityComponentSystem${LIBRARY_EXTENSION}	STATIC	${ENTITY_COMPONENT_SYSTEM_HEADER_FILES}	${ENTITY_COMPONENT_SYSTEM_SOURCE_FILES})
ADD_LIBRARY(Snake${LIBRARY_EXTENSION}					STATIC	${SNAKE_HEADER_FILES}					${SNAKE_SOURCE_FILES})
ADD_LIBRARY(Arkanoid${LIBRARY_EXTENSION}				STATIC	${ARKANOID_HEADER_FILES}				${ARKANOID_SOURCE_FILES})
ADD_LIBRARY(Pacman${LIBRARY_EXTENSION}					STATIC	${PACMAN_HEADER_FILES}					${PACMAN_SOURCE_FILES})
ADD_LIBRARY(Castle${LIBRARY_EXTENSION}					STATIC	${CASTLE_HEADER_FILES}					${CASTLE_SOURCE_FILES})
ADD_LIBRARY(Hurricane${LIBRARY_EXTENSION}				STATIC	${HURRICANE_HEADER_FILES}				${HURRICANE_SOURCE_FILES})
ADD_LIBRARY(Kingdom${LIBRARY_EXTENSION}					STATIC	${KINGDOM_HEADER_FILES}					${KINGDOM_SOURCE_FILES})
ADD_LIBRARY(Intrusion${LIBRARY_EXTENSION}				STATIC	${INTRUSION_HEADER_FILES}				${INTRUSION_SOURCE_FILES})
ADD_LIBRARY(Minesweeper${LIBRARY_EXTENSION}				STATIC	${MINESWEEPER_HEADER_FILES}				${MINESWEEPER_SOURCE_FILES})
ADD_LIBRARY(Pollution${LIBRARY_EXTENSION}				STATIC	${POLLUTION_HEADER_FILES}				${POLLUTION_SOURCE_FILES})
ADD_LIBRARY(Driller${LIBRARY_EXTENSION}					STATIC	${DRILLER_HEADER_FILES}					${DRILLER_SOURCE_FILES})
ADD_LIBRARY(Sovereign${LIBRARY_EXTENSION}				STATIC	${SOVEREIGN_HEADER_FILES}				${SOVEREIGN_SOURCE_FILES})

SET(LOCAL_LIBS ${LOCAL_LIBS}
	Pacman${LIBRARY_EXTENSION}
	Arkanoid${LIBRARY_EXTENSION}
	Snake${LIBRARY_EXTENSION}
	EntityComponentSystem${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
)

SET(HURRICANE_LIBS ${HURRICANE_LIBS}
	Hurricane${LIBRARY_EXTENSION}
	EntityComponentSystem${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(CASTLE_LIBS ${CASTLE_LIBS}
	Castle${LIBRARY_EXTENSION}
	EntityComponentSystem${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(KINGDOM_LIBS ${KINGDOM_LIBS}
	Kingdom${LIBRARY_EXTENSION}
	EntityComponentSystem${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(INTRUSION_LIBS ${INTRUSION_LIBS}
	Intrusion${LIBRARY_EXTENSION}
	EntityComponentSystem${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(MINESWEEPER_LIBS ${MINESWEEPER_LIBS}
	Minesweeper${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(POLLUTION_LIBS ${POLLUTION_LIBS}
	Pollution${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(DRILLER_LIBS ${DRILLER_LIBS}
	Driller${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(SOVEREIGN_LIBS ${SOVEREIGN_LIBS}
	Sovereign${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

SET(ALL_LIBS ${ALL_LIBS}
	${LOCAL_LIBS}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
	${LUA_LIBRARIES}
)

GET_DIRECTORY_PROPERTY( CompileDefinitions DIRECTORY ${CMAKE_SOURCE_DIR} COMPILE_DEFINITIONS )
FOREACH( d ${CompileDefinitions} )
    MESSAGE( STATUS "Definition: " ${d} )
ENDFOREACH()
FOREACH( l ${THIRD_PARTY_LIBS} )
    MESSAGE( STATUS "Third Party Library: " ${l} )
ENDFOREACH()
FOREACH( l ${LOCAL_LIBS} )
    MESSAGE( STATUS "Local Library: " ${l} )
ENDFOREACH()
FOREACH( l ${SFML_DEPENDENCIES} )
    MESSAGE( STATUS "SFML Dependency: " ${l} )
ENDFOREACH()

ADD_EXECUTABLE(Games Games.cpp)
TARGET_LINK_LIBRARIES(Games LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(Intrusion Intrusion.cpp)
TARGET_LINK_LIBRARIES(Intrusion LINK_PUBLIC ${INTRUSION_LIBS})

ADD_EXECUTABLE(Kingdom Kingdom.cpp)
TARGET_LINK_LIBRARIES(Kingdom LINK_PUBLIC ${KINGDOM_LIBS})

ADD_EXECUTABLE(Hurricane Hurricane.cpp)
TARGET_LINK_LIBRARIES(Hurricane LINK_PUBLIC ${HURRICANE_LIBS})

ADD_EXECUTABLE(Castle Castle.cpp)
TARGET_LINK_LIBRARIES(Castle LINK_PUBLIC ${CASTLE_LIBS})

ADD_EXECUTABLE(Minesweeper Minesweeper.cpp)
TARGET_LINK_LIBRARIES(Minesweeper LINK_PUBLIC ${MINESWEEPER_LIBS})

ADD_EXECUTABLE(Pollution Pollution.cpp)
TARGET_LINK_LIBRARIES(Pollution LINK_PUBLIC ${POLLUTION_LIBS})

ADD_EXECUTABLE(Driller app/Driller/Driller.cpp)
TARGET_LINK_LIBRARIES(Driller LINK_PUBLIC ${DRILLER_LIBS})

ADD_EXECUTABLE(Sovereign app/Sovereign/Sovereign.cpp)
TARGET_LINK_LIBRARIES(Sovereign LINK_PUBLIC ${SOVEREIGN_LIBS})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/test/include)

ADD_EXECUTABLE(Test test/Test.cpp ${TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(Test LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(KingdomTest test/KingdomTest.cpp ${KINGDOM_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(KingdomTest LINK_PUBLIC ${KINGDOM_LIBS})

ADD_EXECUTABLE(IntrusionTest test/IntrusionTest.cpp ${INTRUSION_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(IntrusionTest LINK_PUBLIC ${INTRUSION_LIBS})

ADD_EXECUTABLE(PollutionTest test/PollutionTest.cpp ${POLLUTION_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(PollutionTest LINK_PUBLIC ${POLLUTION_LIBS})

ADD_EXECUTABLE(DrillerTest test/DrillerTest.cpp ${DRILLER_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(DrillerTest LINK_PUBLIC ${DRILLER_LIBS})

ADD_EXECUTABLE(SovereignTest test/SovereignTest.cpp ${SOVEREIGN_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(SovereignTest LINK_PUBLIC ${SOVEREIGN_LIBS})

ENABLE_TESTING()
ADD_TEST(NAME GamesTests COMMAND Test)
ADD_TEST(NAME KingdomTests COMMAND KingdomTest)
ADD_TEST(NAME IntrusionTests COMMAND IntrusionTest)
ADD_TEST(NAME PollutionTests COMMAND PollutionTest)
ADD_TEST(NAME DrillerTests COMMAND DrillerTest)
ADD_TEST(NAME SovereignTests COMMAND SovereignTest)

FILE(COPY ${CMAKE_SOURCE_DIR}/data DESTINATION ${CMAKE_BINARY_DIR})